--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -247,64 +247,64 @@
 				</div>
 			</div>
 
-				{{!-- Traits Tab --}}
-				<div id="traits" class="tab items" data-tab="traits" data-group="primary">
-						<table class="items-list">
-								<tr class="item item-header" style="background-color: rgba(0, 0, 0, 0.2);">
-										<td class="item-image"></td>
-										<td class="item-name">Name</td>
-										<td class="item-notes">Notes</td>
-										<td class="item-rolls">Roll</td>
-										<td class="item-points">Points</td>
-										<td class="item-controls"></td>
-								</tr>
-								{{#each actor.traitCategories as |category cat|}}
-									{{#unless (eq category "")}}
-									<tr class="item item-header trait-category-header">
-										<td colspan="6">
-											<a class="accordion" id="t-accordion-clickable-{{category}}">{{category}}</a>
+			{{!-- Traits Tab --}}
+			<div id="traits" class="tab items" data-tab="traits" data-group="primary">
+				<table class="items-list">
+					<tr class="item item-header" style="background-color: rgba(0, 0, 0, 0.2);">
+							<td class="item-image"></td>
+							<td class="item-name">Name</td>
+							<td class="item-notes">Notes</td>
+							<td class="item-rolls">Roll</td>
+							<td class="item-points">Points</td>
+							<td class="item-controls"></td>
+					</tr>
+					{{#each actor.data.traitCategories as |category cat|}}
+						{{#unless (eq category "")}}
+						<tr class="item item-header trait-category-header">
+							<td colspan="6">
+								<a class="accordion" id="t-accordion-clickable-{{category}}">{{category}}</a>
+							</td>
+						</tr>
+						{{/unless}}
+						{{#each ../actor.data.items as |item id|}}
+							{{#if (eq type "Trait") }}
+								{{#if (eq item.data.data.subCategory category)}}
+									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+										<td class="item-image" style="width: 24px; padding: 0 2px">
+											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+										</td>
+										<td class="item-name">
+												{{item.name}}
+										</td>
+										<td class="item-notes">
+												{{data.data.shortNotes}}
+										</td>
+										<td class="item-skill" style="width: 3em;">
+											{{#if (isInt data.level)}}
+												{{#if data.level}}
+													<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.data.level}}"
+															 data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+													{{data.data.level}}
+												{{/if}}
+											{{/if}}
+										</td>
+										<td class="item-points" style="width: 4em;">
+											<div class="item-notes">
+												{{data.data.points}}
+											</div>
+										</td>
+
+										<td class="item-controls" style="width: 30px;">
+												<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+												<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
 										</td>
 									</tr>
-									{{/unless}}
-									{{#each ../actor.items as |item id|}}
-										{{#if (eq type "Trait") }}
-											{{#if (eq item.data.subCategory category)}}
-												<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
-													<td class="item-image" style="width: 24px; padding: 0 2px">
-														<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-													</td>
-													<td class="item-name">
-															{{item.name}}
-													</td>
-													<td class="item-notes">
-															{{data.data.shortNotes}}
-													</td>
-													<td class="item-skill" style="width: 3em;">
-														{{#if (isInt data.level)}}
-															{{#if data.level}}
-																<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.data.level}}"
-																		 data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
-																{{data.data.level}}
-															{{/if}}
-														{{/if}}
-													</td>
-													<td class="item-points" style="width: 4em;">
-														<div class="item-notes">
-															{{data.data.points}}
-														</div>
-													</td>
-
-													<td class="item-controls" style="width: 30px;">
-															<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-															<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-													</td>
-												</tr>
-											{{/if}}
-										{{/if}}
-									{{/each}}
-								{{/each}}
-						</table>
-				</div>
+								{{/if}}
+							{{/if}}
+						{{/each}}
+					{{/each}}
+				</table>
+			</div>
 
 			{{!-- Rollable Tab --}}
 			<div id="rollable" class="tab items" data-tab="rollable" data-group="primary">
@@ -317,7 +317,7 @@
 						<td class="item-rolls">Skill</td>
 						<td class="item-controls"></td>
 					</tr>
-					{{#each actor.rollableCategories as |category cat|}}
+					{{#each actor.data.rollableCategories as |category cat|}}
 						{{#unless (eq category "")}}
 						<tr class="item item-header trait-category-header">
 							<td colspan="6">
@@ -325,9 +325,9 @@
 							</td>
 						</tr>
 						{{/unless}}
-						{{#each ../actor.items as |item id|}}
+						{{#each ../actor.data.items as |item id|}}
 							{{#if (eq type "Rollable")}}
-								{{#if (eq item.data.subCategory category)}}
+								{{#if (eq item.data.data.subCategory category)}}
 									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
 										<td class="item-image" style="width: 24px; padding: 0 2px">
 											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
