--- a/templates/item/trait-sheet.html
+++ b/templates/item/trait-sheet.html
@@ -70,7 +70,6 @@
             <div class="tab">
                 <table>
                     <tr class="equipment-header">
-                        <td class="resource-label">ID</td>
                         <td class="resource-label">Name</td>
                         <td class="resource-label">Level</td>
                         <td class="resource-label">Skill Name / Mod</td>
@@ -83,9 +82,8 @@
                         <td class="resource-label">ST</td>
                         <td class="resource-label"></td>
                     </tr>
-                    {{#each data.melee as |melee id|}}
+                    {{#each data.data.melee as |melee id|}}
                     <tr class="equipment-entry">
-                        <td class="resource-label">{{id}}</td>
                         <td><input type="text" name="data.melee.{{id}}.name" value="{{name}}" title="{{name}}" style="text-align:left;" /></td>
                         <td class="resource-label">{{melee.level}}</td>
                         <td class="equipmentInputInput">
@@ -155,7 +153,6 @@
             <div class="tab">
                 <table>
                     <tr class="equipment-header">
-                        <td class="resource-label">ID</td>
                         <td class="resource-label">Name</td>
                         <td class="resource-label">Level</td>
                         <td class="resource-label">Skill Name / Mod</td>
@@ -171,9 +168,8 @@
                         <td class="resource-label">ST</td>
                         <td class="resource-label"></td>
                     </tr>
-                    {{#each data.ranged as |ranged id|}}
+                    {{#each data.data.ranged as |ranged id|}}
                     <tr class="equipment-entry">
-                        <td class="resource-label">{{id}}</td>
                         <td><input type="text" name="data.ranged.{{id}}.name" value="{{name}}" title="{{name}}" style="text-align:left;" /></td>
                         <td class="resource-label">{{ranged.level}}</td>
                         <td class="equipmentInputInput">
@@ -241,7 +237,8 @@
                 <span>
                     <label>Body Type:</label>
                     <select name="data.armour.bodyType.name" class="bodyType">
-                        {{#select data.armour.bodyType.name}}
+                        {{log data.data.armour}}
+                        {{#select data.data.armour.bodyType.name}}
                         <option value="">Make a Selection</option>
                         <option value="humanoid">Humanoid</option>
                         <option value="wingedHumanoid">Winged Humanoid</option>
@@ -261,7 +258,7 @@
                         {{/select}}
                     </select>
                 </span>
-                {{#if (eq data.armour.bodyType.name "") }}
+                {{#if (eq data.data.armour.bodyType.name "") }}
                 <br>Please only set body type if this equipment applies DR. Otherwise the formula that adds up armour will check this for DR values. With enough items on your sheet it will eventually degrade performance.
                 {{else}}
                 <span class="tooltip">
@@ -279,7 +276,7 @@
                 </span>
                 {{/if}}
                 <table class="dr-entry-table">
-                    {{#unless (eq data.armour.bodyType.name "") }}
+                    {{#unless (eq data.data.armour.bodyType.name "") }}
                     <tr class="hit-locations">
                         <td class="dr-header"></td>
                         <td class="dr-header">Flex</td>
@@ -294,7 +291,7 @@
                         <td class="dr-damage-types">Tox</td>
                     </tr>
                     {{/unless}}
-                    {{#each data.armour.bodyType.body as |bodyPart partId|}}<!--Loop through the body parts-->
+                    {{#each data.data.armour.bodyType.body as |bodyPart partId|}}<!--Loop through the body parts-->
                     <tr class="hit-locations master-location">
                         <th colspan="11">{{bodyPart.label}}</th>
                     </tr>
