Correcting display of items on their sheet and the actor sheet

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -597,12 +597,13 @@
 						<td class="item-title" style="padding-right: 0.2em">TL</td>
 						<td class="item-title" style="padding-right: 0.2em">LC</td>
 						<td class="item-title" style="padding-right: 0.2em">Qty</td>
-						<td class="item-title"  style="text-align: center;">$</td>
+						<td class="item-title" style="text-align: center;">$</td>
 						<td class="item-title" style="padding-right: 0.2em; text-align: center;">lbs</td>
 						<td class="item-title">Status</td>
 						<td class="item-controls"></td>
 					</tr>
-					{{#each actor.equipmentCategories as |category cat|}}
+					{{log actor}}
+					{{#each actor.data.equipmentCategories as |category cat|}}
 						{{#unless (eq category "")}}
 						<tr class="item item-header trait-category-header">
 							<td colspan="10">
@@ -610,21 +611,23 @@
 							</td>
 						</tr>
 						{{/unless}}
-						{{#each ../actor.items as |item id|}}
+
+						{{#each ../actor.data.items as |item id|}}
 							{{#if (eq type "Equipment") }}
-								{{#if (eq item.data.subCategory category)}}
+								{{#if (eq item.data.data.subCategory category)}}
+								{{log item}}
 									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
 										<td class="item-image" style="width: 24px; padding: 0 2px">
 											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 										</td>
-										<td class="item-name"><span>{{item.name}}</span></td>
-										<td class="item-notes"><span>{{item.data.shortNotes}}</span></td>
-										<td style="width: 1em;"><span>{{item.data.tl}}</span></td>
-										<td style="width: 1em;"><span>{{item.data.lc}}</span></td>
-										<td style="width: 1.5em;"><span>{{item.data.quantity}}</span></td>
-										<td style="text-align: center;"><span>{{item.data.ttlCost}}</span></td>
-										<td style="text-align: center;"><span>{{item.data.ttlWeight}}</span></td>
-										<td style="width: 62px;"><span>{{item.data.equipStatus}}</span></td>
+										<td class="item-name"><span>{{item.data.name}}</span></td>
+										<td class="item-notes"><span>{{item.data.data.shortNotes}}</span></td>
+										<td style="width: 1em;"><span>{{item.data.data.tl}}</span></td>
+										<td style="width: 1em;"><span>{{item.data.data.lc}}</span></td>
+										<td style="width: 1.5em;"><span>{{item.data.data.quantity}}</span></td>
+										<td style="text-align: center;"><span>{{item.data.data.ttlCost}}</span></td>
+										<td style="text-align: center;"><span>{{item.data.data.ttlWeight}}</span></td>
+										<td style="width: 62px;"><span>{{item.data.data.equipStatus}}</span></td>
 										<td class="item-controls" style="width: 30px;">
 											<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
 											<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -641,8 +644,8 @@
 						<td><span></span></td>
 						<td><span></span></td>
 						<td><span class="bold">Totals:</span></td>
-						<td style="text-align: center;"><span>{{actor.data.bio.carriedValue}}</span></td>
-						<td style="text-align: center;"><span>{{actor.data.bio.carriedWeight}}</span></td>
+						<td style="text-align: center;"><span>{{actor.data.data.bio.carriedValue}}</span></td>
+						<td style="text-align: center;"><span>{{actor.data.data.bio.carriedWeight}}</span></td>
 						<td><span></span></td>
 						<td class="item-controls"></td>
 					</tr>
